<resources>
    <string name="app_name">Bici Red</string>

    <string name="holder_user">Usuario</string>
    <string name="holder_key">Clave</string>

    <string name="place_holder_user">Digite su usuario y/o correo</string>
    <string name="place_holder_key">Digite la clave</string>

    <string name="load_rutas">Cargando Rutas</string>

    <string name="button_login">Iniciar Sesión</string>
    <string name="button_register">Registrarme</string>
    <string name="title_activity_news">Novedades</string>

    <string name="profile">Perfil</string>
    <string name="configure">Configuración</string>
    <string name="go_to">ver mas</string>

    <string name="google_maps_key">AIzaSyBzxAxWJLQL1JmmxHuhp6tPxhhIgFuhYS8</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Perfil</string>
    <string name="nombrec">Nombre Completo</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="genero">Genero</string>
    <string name="conformarc">Confirmar Clave</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_mapa_detalle_ruta">MapaDetalleRuta</string>
    <string name="title_activity_fotografias_lista">FotografiasLista</string>

    <string name="mensaje_error_not_inputs">Debes digitar tu usuario y/o clave</string>
    <string name="mensaje_error_not_inputs2">Debe seleccionar la fecha, la hora y la ruta</string>
    <string name="mensaje_error_not_inputs3">Hay un campo vacío</string>
    <string name="mensaje_error_not_inputs4">La clave y la confirmación de clave no son iguales</string>
    <string name="ok">Ok</string>

    <string name="MENSAJE_ERROR_TIME">Revisa tu conexión a internet</string>
    <string name="MENSAJE_ERROR_GENERAL">Estamos teniendo inconvenientes técnicos, reintenta más tarde</string>
    <string name="MENSAJE_NO_DATA">No encontramos información</string>
    <string name="MENSAJE_ERROR_PAINT_ROUTE">No hemos podido encontrar la ruta, intenta más tarde</string>
    <string name="ERROR_CREATE_FILE">Estamos teniendo inconvenientes al crear la fotografía</string>
    <string name="ERROR_UPDATE_FILE">Estamos teniendo enviar la fotografía</string>
    <string name="ERROR_SAVE_FILE">Tuvimos inconvenientes al guardar la fotografía en el teléfono</string>
</resources>
