<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_login"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="200dp"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_rounded"
        android:ems="8"
        android:padding="10dp"
        android:text="@string/holder_user"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="14"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/place_holder_user"
        android:textColor="@color/primaryText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textview_rounded"
        android:ems="8"
        android:padding="10dp"
        android:text="@string/holder_key"
        android:textColor="@color/primaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:ems="14"
        android:padding="10dp"
        android:hint="@string/place_holder_key"
        android:textColor="@color/primaryText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/button_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/button_secondary"
        android:text="@string/button_register" />
</android.widget.LinearLayout>